--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,6 +14,11 @@
 body {
   background-color: $background;
   color: $text;
+  #show-tasks {
+    .bi-list {
+      display: none;
+    }
+  }
 }
 
 .layout {
@@ -50,6 +55,11 @@ body {
     grid-area: body;
     padding: 2rem;
     overflow-y: auto;
+    align-content: center;
+    h1 {
+      text-align: center;
+      margin-bottom: 50px;
+    }
   }
 }
 
@@ -95,10 +105,10 @@ body {
 
 @media screen and (max-width: 771px) {
   #show-tasks {
-    display: block !important;
     padding: 15px 20px;
 
     .bi-list {
+      display: block !important;
       font-size: 30px;
     }
   }
